--- a/index.css
+++ b/index.css
@@ -192,7 +192,7 @@ body {
   height: 50vh;
   background-position: center;
   background-size: cover;
-  background-image: url(./background_tree_clean.png);
+  background-image: url(background_tree_clean.png);
 }
 
 .footer-footer,
@@ -295,28 +295,28 @@ body {
 
 @font-face {
   font-family: "LucideCalli";
-  src: url("./fonts/LucidaUnicodeCalligraphy.ttf") format("truetype");
+  src: url("fonts/LucidaUnicodeCalligraphy.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "LucideCalli";
-  src: url("./fonts/LucidaUnicodeCalligraphyBold.ttf") format("truetype");
+  src: url("fonts/LucidaUnicodeCalligraphyBold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "PoppinsLight";
-  src: url("./fonts/Poppins-Light.ttf") format("truetype");
+  src: url("fonts/Poppins-Light.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "PoppinsLight";
-  src: url("./fonts/Poppins-Medium.ttf") format("truetype");
+  src: url("fonts/Poppins-Medium.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
@@ -416,7 +416,7 @@ a {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  background-image: url("./background_tree.png");
+  background-image: url("background_tree.png");
   padding: 32px;
   max-width: 700px;
   width: 100%;
