--- a/index.css
+++ b/index.css
@@ -548,6 +548,7 @@ a {
   }
   .popup-heading-and-login {
     flex-direction: column;
+    flex-flow: column-reverse;
     row-gap: 24px;
   }
   .popup-login {
@@ -558,6 +559,10 @@ a {
     flex-direction: column;
     align-items: start;
     flex-flow: column-reverse;
+    height: unset;
+  }
+  .popup-tag-and-img div.popup-deleted-emails {
+    padding-top: 0px;
   }
   .popup-tag-and-img img {
     height: 140px;
